# ChangeLog for dev-java/log4j
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/log4j/ChangeLog,v 1.13 2004/01/19 04:56:24 strider Exp $

  19 Jan 2004; Adrian Almenar <strider@gentoo.org> log4j-1.2.8.ebuild:
  Added amd64 keyword. Stable on ppc.

  16 Jan 2004; Adrian Almenar <strider@gentoo.org> log4j-1.2.8.ebuild:
  Added ~ppc keyword cause other packages depend on it.
  
  25 Dec 2003; Jason Wever <weeve@gentoo.org> log4j-1.2.8.ebuild:
  Marked stable on sparc due to numerous other packages depending on it that
  were inappropriately marked stable on sparc.

  16 Dec 2003; Jason Wever <weeve@gentoo.org> log4j-1.2.8.ebuild:
  Added ~sparc keyword to fix broken dependencies in dev-java/common-*.

*log4j-1.2.8 (20 Feb 2003)

  20 Feb 2003; Adrian Almenar <strider@gentoo.org> log4j-1.2.8.ebuild: New

*log4j-1.2.7 (26 Oct 2002)

  26 Oct 2002; Maik Schreiber <blizzy@gentoo.org> log4j-1.2.7.ebuild: New
  version.

  26 Oct 2002; Maik Schreiber <blizzy@gentoo.org> log4j-1.2.5.ebuild: Changed
  KEYWORDS to "x86".

*log4j-1.2.5 (08 Jul 2002)

  08 Jul 2002; Maik Schreiber <blizzy@gentoo.org> log4j-1.2.5.ebuild : New
  version, also closes bug #3223.

*log4j-1.1.3 (10 Apr 2002)

  01 Aug 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ChangeLog,
  log4j-1.1.3.ebuild: Added LICENSE, SLOT and KEYWORDS.

  10 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ChangeLog,
  log4j-1.1.3.ebuild files/digest-log4j-1.1.3: Initial import.