@@ -1,8 +1,8 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/log4j/Attic/log4j-1.2.8.ebuild,v 1.6 2004/01/19 04:56:24 strider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/log4j/Attic/log4j-1.2.8.ebuild,v 1.7 2004/03/22 23:11:19 zx Exp $
 
-S="${WORKDIR}/jakarta-${P}"
+inherit java-pkg
 
 DESCRIPTION="A low-overhead robust logging package for Java"
 SRC_URI="http://jakarta.apache.org/log4j/jakarta-${P}.tar.gz"
@@ -10,12 +10,13 @@ HOMEPAGE="http://jakarta.apache.org"
 LICENSE="Apache-1.1"
 SLOT="1"
 KEYWORDS="x86 sparc ppc amd64"
+IUSE="doc"
+DEPEND=">=virtual/jdk-1.2"
 
-RDEPEND=">=virtual/jdk-1.3"
-DEPEND="${RDEPEND}"
+S="${WORKDIR}/jakarta-${P}"
 
 src_install() {
-	dojar dist/lib/*.jar
-	dohtml -r docs/*
+	java-pkg_dojar dist/lib/*.jar
+	use doc && dohtml -r docs/*
 }
 
